--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "moment": "^2.22.1",
+    "mysql": "^2.15.0",
     "nodemon": "^1.17.4"
   },
   "devDependencies": {
